...

                        <TextView
                            android:id="@+id/text_sleepAverage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <com.github.mikephil.charting.charts.CombinedChart
                            android:id="@+id/barChart_sleep"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
...

                        <TextView
                            android:id="@+id/text_studyAverage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <com.github.mikephil.charting.charts.CombinedChart
                            android:id="@+id/barChart_study"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
...

                        <com.github.mikephil.charting.charts.CombinedChart
                            android:id="@+id/barChart_activity"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
...

                        <TextView
                            android:id="@+id/text_activityRange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/text_stepsAverage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <com.github.mikephil.charting.charts.CombinedChart
                            android:id="@+id/barChart_steps"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
...

                        <ImageButton
                            android:id="@+id/button_stepsRangeBefore"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
...

                        <TextView
                            android:id="@+id/text_stepsRange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
