...
                    android:textAppearance="@style/CustomTextAppearance.Body1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_feedNotifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_padding"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:switchTextAppearance="@style/CustomTextAppearance.Body1"
...
                    android:textAppearance="@style/CustomTextAppearance.Body1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_trendsNotifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_padding"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:switchTextAppearance="@style/CustomTextAppearance.Body1"
...
                    android:textAppearance="@style/CustomTextAppearance.Body1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_loggingNotifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_padding"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:switchTextAppearance="@style/CustomTextAppearance.Body1"
...
                    android:textAppearance="@style/CustomTextAppearance.Body1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_padding"
                    android:text="Reset"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    android:textAppearance="@style/CustomTextAppearance.Body1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_sample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_padding"
                    android:text="Load"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
                android:text="About This App"
                android:textAppearance="@style/CustomTextAppearance.Display1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider9" />

            <TextView
                android:id="@+id/text_aboutApp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:text="This app is created for a part of  CM10313 coursework. It has been developed by Group 20."
...
