...
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:strokeWidth="20dp" />
                        </com.group20.pi_software.ui.summary.SquareLayout>

                        <TextView
                            android:id="@+id/text_sleepSummary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/default_padding"
                            android:layout_marginEnd="@dimen/default_padding"
                            android:layout_marginBottom="@dimen/default_padding"
                            android:text="5h 34min"
...
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:strokeWidth="20dp" />
                        </com.group20.pi_software.ui.summary.SquareLayout>

                        <TextView
                            android:id="@+id/text_studySummary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/default_padding"
                            android:layout_marginEnd="@dimen/default_padding"
                            android:layout_marginBottom="@dimen/default_padding"
                            android:text="4h 21min"
...
                            <TextView
                                android:id="@+id/text_stepsPercentage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="75%"
                                android:textAppearance="@style/CustomTextAppearance.Body1"
                                app:layout_constraintBottom_toBottomOf="@+id/progressRing_steps"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <com.timqi.sectorprogressview.ColorfulRingProgressView
                                android:id="@+id/progressRing_steps"
...
                                app:layout_constraintTop_toTopOf="parent"
                                app:strokeWidth="20dp" />

                        </com.group20.pi_software.ui.summary.SquareLayout>

                        <TextView
                            android:id="@+id/text_stepsSummary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/default_padding"
                            android:layout_marginEnd="@dimen/default_padding"
                            android:layout_marginBottom="@dimen/default_padding"
                            android:text="2,543"
...
                                app:layout_constraintTop_toTopOf="parent"
                                app:strokeWidth="20dp" />

                        </com.group20.pi_software.ui.summary.SquareLayout>

                        <TextView
                            android:id="@+id/text_workoutSummary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/default_padding"
                            android:layout_marginEnd="@dimen/default_padding"
                            android:layout_marginBottom="@dimen/default_padding"
                            android:text="234 kcal"
...

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large_padding"
        android:layout_marginBottom="@dimen/large_padding"
        android:clickable="true"
        android:contentDescription="@string/description_floatingActionButton"
...
