<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_summary"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_summary" />

    <item
        android:id="@+id/navigation_trend"
        android:icon="@drawable/ic_round_auto_graph_24"
        android:title="@string/title_trend" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_round_account_circle_24"
        android:title="@string/title_profile" />

</menu>
